# kubernetes_asyncio-stubs

./: .gitmodules  Readme.md  pyproject.toml
codegen/: __main__.py
codegen/base/kubernetes_asyncio-stubs/: watch.pyi
kubernetes_asyncio-stubs/: __init__.pyi  stream.pyi  utils.pyi
kubernetes_asyncio-stubs/client/: __init__.pyi  api_client.pyi  exceptions.pyi  rest.pyi
kubernetes_asyncio-stubs/client/api/: WellKnown_api.pyi  __init__.pyi  admissionregistration_api.pyi  admissionregistration_v1_api.pyi  admissionregistration_v1alpha1_api.pyi  admissionregistration_v1beta1_api.pyi  apiextensions_api.pyi  apiextensions_v1_api.pyi  apiregistration_api.pyi  apiregistration_v1_api.pyi  apis_api.pyi  apps_api.pyi  apps_v1_api.pyi  authentication_api.pyi  authentication_v1_api.pyi  authentication_v1alpha1_api.pyi  authentication_v1beta1_api.pyi  authorization_api.pyi  authorization_v1_api.pyi  autoscaling_api.pyi  autoscaling_v1_api.pyi  autoscaling_v2_api.pyi  batch_api.pyi  batch_v1_api.pyi  certificates_api.pyi  certificates_v1_api.pyi  certificates_v1alpha1_api.pyi  certificates_v1beta1_api.pyi  coordination_api.pyi  coordination_v1_api.pyi  coordination_v1alpha1_api.pyi  coordination_v1alpha2_api.pyi  coordination_v1beta1_api.pyi  core_api.pyi  core_v1_api.pyi  custom_objects_api.pyi  discovery_api.pyi  discovery_v1_api.pyi  events_api.pyi  events_v1_api.pyi  (+31 more)
kubernetes_asyncio-stubs/client/models/: __init__.pyi  admissionregistration_v1_service_reference.pyi  admissionregistration_v1_webhook_client_config.pyi  apiextensions_v1_service_reference.pyi  core_v1_event.pyi  (+784 more)
kubernetes_asyncio-stubs/config/: __init__.pyi  kube_config.pyi
kubernetes_asyncio_ext/: __init__.py
(+4 files in other folders)
