[project]
name = "kubernetes_asyncio-stubs"
version = "31.1.1"
description = "Type stubs for the Kubernetes Python API async client"
authors = [{ name = "Kialo", email = "sre@kialo.com" }]
license = { file = "LICENSE.md" }
readme = "Readme.md"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["kubernetes_asyncio_ext", "kubernetes_asyncio-stubs"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = ["inflection == 0.5.1", "ruff == 0.6.9"]
