[project]
name = "kubernetes_asyncio-stubs"
version = "32.3.2"
description = "Type stubs for the Kubernetes Python API async client"
authors = [{ name = "Kialo", email = "sre@kialo.com" }]
license = { file = "LICENSE.md" }
readme = "Readme.md"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kubernetes_asyncio-stubs", "kubernetes_asyncio_ext"]

[tool.uv]
dev-dependencies = ["inflection", "ruff"]
